--- a/style.css
+++ b/style.css
@@ -148,24 +148,16 @@ i {
   top: 45px;
 }
 .btn-roll {
-  top: 433px;
+  top: 403px;
 }
 .btn-hold {
   top: 467px;
 }
 
-.dice1 {
+.dice {
   position: absolute;
   left: 50%;
   top: 178px;
-  transform: translateX(-50%);
-  height: 100px;
-  box-shadow: 0px 10px 60px rgba(0, 0, 0, 0.1);
-}
-.dice2 {
-  position: absolute;
-  left: 50%;
-  top: 300px;
   transform: translateX(-50%);
   height: 100px;
   box-shadow: 0px 10px 60px rgba(0, 0, 0, 0.1);
