--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ body {
 }
 
 /**********************************************
-*** ТОГЛОГЧИД
+*** Тffff
 **********************************************/
 
 .player-name {
